--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -243,6 +243,7 @@
 
     }
     .content_img img{
+      width: 500px;
       height: 380px;
       transform: translateX(-30px);
       box-shadow:  0 .1rem .8rem rgba(0,0,0,.2);
