--- a/limbo/affiliate/templates/blog/programing/python_venv.html
+++ b/limbo/affiliate/templates/blog/programing/python_venv.html
@@ -16,7 +16,7 @@
  {% endblock style %}
   {% load static %}
     {% block title%}How to create python virtual Environment - {% endblock title%}
-    {% block actmob%} class="active"{% endblock actmob%}
+    {% block actart%} class="active"{% endblock actart%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
