--- a/limbo/affiliate/templates/blog/programing/top-10-framework.html
+++ b/limbo/affiliate/templates/blog/programing/top-10-framework.html
@@ -3,7 +3,7 @@
 {% block key%}<meta name="keywords" content="Top 10 backend Framework for web development in 2020, Top 10 backend Framework, Static & Dynamic Web, Static and Dynamic, What is backend, most popular framework, Django framework, top 10 framework, frameworks "> {% endblock key%}
   {% load static %}
     {% block title%}Top 10 backend Framework for web development in 2020 - hipein.com{% endblock title%}
-    {% block actmob%} class="active"{% endblock actmob%}
+    {% block actart%} class="active"{% endblock actart%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
