--- a/limbo/affiliate/templates/mobile/samsung/note 10/note 10.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 10/note 10.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Samsung released his new smartphone Samsung Galaxy Note 10 at price of 73,600-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="samsung galaxy Note 10 mobile, samsung Note 10 mobile , samsung galaxy Note 10 mobile at price, samsung galaxy Note 10 mobile phone youtube review, samsung galaxy Note 10 price, samsung galaxy Note 10 price at amazon"> {% endblock key%}
     {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Samsung Galaxy Note 10 Full specification: hipein.com{% endblock title%}
+    {% block title%}Samsung Galaxy Note 10 (8/256GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
