--- a/limbo/affiliate/templates/mobile/samsung/s10e/s10e.html
+++ b/limbo/affiliate/templates/mobile/samsung/s10e/s10e.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Samsung released his new smartphone Samsung Galaxy s10e at price of Rs. 59,000, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="samsung galaxy S10e mobile, samsung S10e mobile , samsung galaxy S10e mobile at price, samsung galaxy S10e mobile phone youtube review, samsung galaxy S10e price, samsung galaxy S10e price at amazon"> {% endblock key%}
     {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Samsung Galaxy S10e Full specification: hipein.com{% endblock title%}
+    {% block title%}Samsung Galaxy S10e (6/128GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
