--- a/limbo/affiliate/templates/mobile/samsung/s20/s20.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20/s20.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Samsung released his new smartphone Samsung Galaxy S20 at price of Rs. 70499, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="samsung galaxy S20 mobile, samsung S20 mobile , samsung galaxy S20 mobile at price, samsung galaxy S20 mobile phone youtube review, samsung galaxy S20 price, samsung galaxy S20 price at amazon"> {% endblock key%}
     {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Samsung Galaxy S20 Full specification: hipein.com{% endblock title%}
+    {% block title%}Samsung Galaxy S20 (8/128GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -11,7 +11,7 @@
       <div class="main">
         <div class="headline2">
           <h4 class="content">Samsung released his new smartphone Samsung Galaxy S20 at price of Rs. 70499</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy S20 : 8/128 for Rs. 70499 Watch Full review-<a href="https://www.youtube.com/watch?v=bkQJRzc3pWM">http://www.youtube.com </a></h2>
+          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy S20 : 8/128GB for Rs. 70499 Watch Full review-<a href="https://www.youtube.com/watch?v=bkQJRzc3pWM">http://www.youtube.com </a></h2>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/samsung/samsung-galaxy-s20-2.jpg' %}" alt="">
