--- a/limbo/affiliate/templates/mobile/samsung/s20plus/s20plus.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20plus/s20plus.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Samsung released his new smartphone Samsung Galaxy S20+ at price of Rs. 77,999, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="samsung galaxy S20 plus mobile, samsung S20 plus mobile , samsung galaxy S20 plus mobile at price, samsung galaxy S20 plus mobile phone youtube review, samsung galaxy S20 plus price, samsung galaxy S20 plus price at amazon"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}samsung galaxy S20 plus Full specification: hipein.com{% endblock title%}
+    {% block title%}samsung galaxy S20 plus (8/128GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
