--- a/limbo/affiliate/templates/mobile/samsung/z flip/z flip.html
+++ b/limbo/affiliate/templates/mobile/samsung/z flip/z flip.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Samsung released his new smartphone Samsung Galaxy Z Flip at price of Rs.1,08,999, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="samsung galaxy Z Flip Max mobile, samsung Z Flip Max mobile , samsung galaxy Z Flip Max mobile at price, samsung galaxy Z Flip Max mobile phone youtube review, samsung galaxy Z Flip Max price, samsung galaxy Z Flip Max price at amazon"> {% endblock key%}
     {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Samsung Galaxy Z Flip Max Full specification: hipein.com{% endblock title%}
+    {% block title%}Samsung Galaxy Z Flip Max (8/256GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
