--- a/limbo/affiliate/templates/mobile/vivo/vivo Z1X/vivo Z1X.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo Z1X/vivo Z1X.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo Z1X at price of Rs. 16,990-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo Z1X mobile phone price, vivo Z1X, vivo Z1X price in india, vivo Z1X review, vivo Z1X specification, vivo Z1X price in amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}Vivo Z1X Full specification: hipein.com{% endblock title%}
+    {% block title%}Vivo Z1X (8/128GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
