--- a/limbo/affiliate/templates/mobile/vivo/vivo u10/vivo u10.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo u10/vivo u10.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo U10 at price of Rs. 10,990-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo U10 mobile phone price, vivo U10, vivo U10 price in india, vivo U10 review, vivo U10 specification, vivo U10 price in amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}Vivo U10 Full specification: hipein.com{% endblock title%}
+    {% block title%}Vivo U10 (3/32GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
