--- a/limbo/affiliate/templates/mobile/vivo/vivo v17/vivo v17.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo v17/vivo v17.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo V17 at price of Rs. 24,990-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo V17 mobile phone price, vivo V17, vivo V17 price in india, vivo V17 review, vivo V17 specification, vivo V17 price in amazon"> {% endblock key%}
   {% load static %}
-    {% block title%}Vivo V17 Full specification: hipein{% endblock title%}
+    {% block title%}Vivo V17 (8/128GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
