--- a/limbo/affiliate/templates/mobile/vivo/vivo v19/vivo v19.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo v19/vivo v19.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo V19 at price of Rs. 27,990-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo V19 mobile phone price, vivo V19, vivo V19 price in india, vivo V19 review, vivo V19 specification, vivo V19 price in amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}Vivo V19 Full specification: hipein.com{% endblock title%}
+    {% block title%}Vivo V19 (8/128GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
