--- a/limbo/affiliate/templates/mobile/vivo/vivo y15/vivo y15.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo y15/vivo y15.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo Y15 at price of Rs. 12,990-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo Y15 pro mobile phone price, vivo Y15 pro, vivo Y15 pro price in india, vivo Y15 pro review, vivo Y15 pro specification, vivo Y15 pro price in amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}Vivo Y15 pro Full specification: hipein.com{% endblock title%}
+    {% block title%}Vivo Y15 pro (4/64GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
