--- a/limbo/affiliate/templates/mobile/vivo/vivo y50/vivo y50.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo y50/vivo y50.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo Y50 at price of Rs. 17990-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo Y50 mobile phone price, vivo Y50, vivo Y50 price in india, vivo Y50 review, vivo Y50 specification, vivo Y50 price in amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}Vivo Y50 Full specification: hipein.com{% endblock title%}
+    {% block title%}Vivo Y50 (8/128GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
