--- a/limbo/affiliate/templates/mobile/samsung/s10/s10.html
+++ b/limbo/affiliate/templates/mobile/samsung/s10/s10.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Samsung Galaxy S10 released his new smartphone Samsung Galaxy S10 at price of Rs. 56,800, buy at best price from flipkart. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="samsung galaxy S10 mobile, samsung S10 mobile , samsung galaxy S10 mobile at price, samsung galaxy S10 mobile phone youtube review, samsung galaxy S10 price, samsung galaxy S10 price at amazon"> {% endblock key%}
     {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Samsung Galaxy S10 Full specification: hipein.com{% endblock title%}
+    {% block title%}Samsung Galaxy S10 (8/512GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
