--- a/limbo/affiliate/templates/mobile/samsung/s20 ultra/s20 ultra.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20 ultra/s20 ultra.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Samsung released his new smartphone Samsung Galaxy S20 Ultra at price of Rs. 97,999, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="samsung galaxy S20 Ultra mobile, samsung S20 Ultra mobile , samsung galaxy S20 Ultra mobile at price, samsung galaxy S20 Ultra mobile phone youtube review, samsung galaxy S20 Ultra price, samsung galaxy S20 Ultra price at amazon"> {% endblock key%}
     {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Samsung Galaxy S20 Ultra Full specification: hipein.com{% endblock title%}
+    {% block title%}Samsung Galaxy S20 Ultra (12/128GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -11,7 +11,7 @@
       <div class="main">
         <div class="headline2">
           <h4 class="content">Samsung released his new smartphone Samsung Galaxy S20 Ultra at price of Rs. 97,999</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy S20 Ultra : 12/128 for Rs. 97,999 Watch Full review-<a href="https://www.youtube.com/watch?v=s83alHRGnXA">http://www.youtube.com </a></h2>
+          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy S20 Ultra : 12/128GB for Rs. 97,999 Watch Full review-<a href="https://www.youtube.com/watch?v=s83alHRGnXA">http://www.youtube.com </a></h2>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/samsung/samsung-galaxy-s20-ultra-2.jpg' %}" alt="">
