--- a/limbo/affiliate/templates/mobile/vivo/vivo s1 pro/vivo s1pro.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo s1 pro/vivo s1pro.html
@@ -1,15 +1,15 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo S1 pro at price of Rs. 19,990, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo S1 pro mobile phone price, vivo S1 pro, vivo S1 pro price in india, vivo S1 pro review, vivo S1 pro specification, vivo S1 pro price in amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}Vivo S1 pro Full specification " hipein.com"{% endblock title%}
+    {% block title%}Vivo S1 pro (8/128GB) Full specification " hipein.com"{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Vivo released his new smartphone Vivo S1 PRO at price of Rs. 19,990</h4>
+          <h4 class="content">Vivo released his new smartphone Vivo S1 pro at price of Rs. 19,990</h4>
           <h2 class="content_tittle"><span>REVIEW</span> Vivo S1 Pro : 8/128GB for Rs. 19,990 Watch Full review-<a href="https://www.youtube.com/watch?v=xN4uWpHVnvI">http://www.youtube.com </a></h2>
         </div>
         <div >
