--- a/limbo/affiliate/templates/mobile/vivo/vivo u20/vivo u20.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo u20/vivo u20.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo U20 at price of Rs. 11,490-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo U20mobile phone price, vivo U20, vivo U20 price in india, vivo U20 review, vivo U20 specification, vivo U20 price in amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}Vivo U20 Full specification: hipein.com{% endblock title%}
+    {% block title%}Vivo U20 (4/64GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
