--- a/limbo/affiliate/templates/mobile/vivo/vivo z1 pro/vivo z1 pro.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo z1 pro/vivo z1 pro.html
@@ -1,15 +1,15 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Vivo released his new smartphone Vivo Z1 PRO at price of Rs. 17990-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="vivo Z1 pro mobile phone price, vivo Z1 pro, vivo Z1 pro price in india, vivo Z1 pro review, vivo Z1 pro specification, vivo Z1 pro price in amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}Vivo Z1 pro Full specification: hipein.com{% endblock title%}
+    {% block title%}Vivo Z1 pro (6/128GB) Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Vivo released his new smartphone Vivo Z1 PRO at price of Rs. 17990_INR</h4>
+          <h4 class="content">Vivo released his new smartphone Vivo Z1 PRO at price of Rs. 17990-INR</h4>
           <h2 class="content_tittle"><span>REVIEW</span> Vivo Z1 Pro : 6/128GB for Rs. 17990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=iVthkWJr30s">http://www.youtube.com </a></h2>
         </div>
         <div >
