--- a/limbo/affiliate/templates/mobile/apple/6s/6s.html
+++ b/limbo/affiliate/templates/mobile/apple/6s/6s.html
@@ -2,7 +2,7 @@
 {% block desc%}<meta name="description" content="Apple released his new smartphone iphone 6s at price of 29,740-INR, buy at best price from flipkart. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="iphone 6s, iphone 6s reviews, iphone 6s specification, iphone 6s price in india, iphone 6s price"> {% endblock key%}
     {% load static %}
-    {% block title%}Apple 6s Full specification{% endblock title%}
+    {% block title%}Apple 6s (2/32GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
