--- a/limbo/affiliate/templates/mobile/samsung/s10plus/s10plus.html
+++ b/limbo/affiliate/templates/mobile/samsung/s10plus/s10plus.html
@@ -3,7 +3,7 @@
 {% block key%}<meta name="keywords" content="samsung galaxy S10 plus mobile, samsung S10 plus mobile , samsung galaxy S10 plus mobile at price, samsung galaxy S10 plus mobile phone youtube review, samsung galaxy S10 plus price, samsung galaxy S10 plus price at amazon"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Samsung Galaxy S10 plus Max (8/512GB) Full specification: hipein.com{% endblock title%}
+    {% block title%}Samsung Galaxy S10 plus (8/512GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
