--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -3,7 +3,7 @@
 {% block key%}<meta name="keywords" content="mobile specifications for pubg, mobile specification websites, mobile specifications and prices, camera phone under 15000 , camera phone amazon, top 5 camera phones, pubg mobile phones list, best pubg phone under 20000"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/home_pageCss.css' %}">{% endblock css%}
-    {% block title%}hipein.com - mobile-phone-reviwes and specifications| music | article  {% endblock title%}
+    {% block title%}hipein.com - mobile phone review and specification |article  {% endblock title%}
   {% block acthome%} class="active"{% endblock acthome%}
     {% block content%}
   <!-- slideshow -->
