--- a/limbo/affiliate/templates/page/about_page.html
+++ b/limbo/affiliate/templates/page/about_page.html
@@ -100,7 +100,7 @@
 {% endblock style %}
 {% load static%}
 {% block css%}<link rel="stylesheet" href="{% static 'pageCss/about.css'%}"> {% endblock css%}
-{% block title%}about us: hipein.com{% endblock title%}
+{% block title%}About Us - hipein.com{% endblock title%}
 {% block content%}
 
     <!-- about -->
