--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -1,6 +1,6 @@
 {% extends 'page/srch.html' %}
     {% load static%}
-    {% block title%}Article{% endblock title%}
+    {% block title%}Article - Technology | Gaming | Gadget | Programing{% endblock title%}
     {% block actart%} class="active"{% endblock actart%}
     <!-- news -->
     {% block content%}
