--- a/limbo/affiliate/templates/mobile/samsung/note 10plus/note 10plus.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 10plus/note 10plus.html
@@ -3,7 +3,7 @@
 {% block key%}<meta name="keywords" content="samsung galaxy Note 10 plus mobile, samsung Note 10 plus mobile , samsung galaxy Note 10 plus mobile at price, samsung galaxy Note 10 plus mobile phone youtube review, samsung galaxy Note 10 plus price, samsung galaxy Note 10 plus price at amazon"> {% endblock key%}
     {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Samsung Galaxy Note 10 plus (12/256GB) Full specification: hipein.com{% endblock title%}
+    {% block title%}Samsung Galaxy Note 10 plus Full specification: hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
