--- a/limbo/affiliate/templates/mobile/apple/11 pro max/11 pro max.html
+++ b/limbo/affiliate/templates/mobile/apple/11 pro max/11 pro max.html
@@ -20,8 +20,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Apple released his new smartphone 11 Pro Max at price of 1,17,100-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Apple 11 Pro Max : 4/64GB for 1,17,100-INR Watch Full review-<a href="https://www.youtube.com/watch?v=bSmJBoXZWto">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Apple released his new smartphone 11 Pro Max at price of 1,17,100-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Apple 11 Pro Max : 4/64GB for 1,17,100-INR Watch Full review-<a href="https://www.youtube.com/watch?v=bSmJBoXZWto">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/apple/apple-11-pro-max-2.jpg'%}" alt="">
