--- a/limbo/affiliate/templates/mobile/apple/se/SE.html
+++ b/limbo/affiliate/templates/mobile/apple/se/SE.html
@@ -20,8 +20,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Apple released his new smartphone iphone SE at price of 42,500-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Apple SE : 3/64GB for 42,500-INR Watch Full review-<a href="https://www.youtube.com/watch?v=UK8HH3_q4yI">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Apple released his new smartphone iphone SE at price of 42,500-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Apple SE : 3/64GB for 42,500-INR Watch Full review-<a href="https://www.youtube.com/watch?v=UK8HH3_q4yI">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image" src="{% static 'image/mobile/apple/apple-se-2.jpg'%}" alt="">
