--- a/limbo/affiliate/templates/mobile/apple/x/x.html
+++ b/limbo/affiliate/templates/mobile/apple/x/x.html
@@ -20,8 +20,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Apple released his new smartphone iphone X at price of 79,990-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> iphone X : 3/256GB for 79,990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=743jq0ncVtA">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Apple released his new smartphone iphone X at price of 79,990-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> iphone X : 3/256GB for 79,990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=743jq0ncVtA">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image" src="{% static 'image/mobile/apple/apple-x-2.jpg'%}" alt="">
