--- a/limbo/affiliate/templates/mobile/mi/mi 10/mi 10.html
+++ b/limbo/affiliate/templates/mobile/mi/mi 10/mi 10.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Xiaomi released his new smartphone Redmi Mi 10 5G at price of 49,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Redmi Note Mi 10 5G : 8/128GB for 49,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=HM50zGXtmLo">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Xiaomi released his new smartphone Redmi Mi 10 5G at price of 49,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Redmi Note Mi 10 5G : 8/128GB for 49,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=HM50zGXtmLo">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/mi/redmi-mi-10-2.jpg' %}" alt="">
