--- a/limbo/affiliate/templates/mobile/mi/note 9pro max/note 9 pro max.html
+++ b/limbo/affiliate/templates/mobile/mi/note 9pro max/note 9 pro max.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Xiaomi released his new phone Redmi Note 9 Pro max at price of {{product}}-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Redmi Note 9 Pro Max: 6/128GB for 16,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=d9npLN6QK70">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Xiaomi released his new phone Redmi Note 9 Pro max at price of {{product}}-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Redmi Note 9 Pro Max: 6/128GB for 16,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=d9npLN6QK70">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/mi/redmi-note-9-pro-max-2.jpg' %}" alt="">
