--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 6T/OnePlus_6T.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 6T/OnePlus_6T.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">OnePlus released his new smartphone OnePlus 6T at price of Rs.39,999</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> OnePlus 6T : 10/256GB for Rs.39,999 Watch Full review-<a href="https://www.youtube.com/watch?v=4rSxuA8OSb4">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">OnePlus released his new smartphone OnePlus 6T at price of Rs.39,999</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> OnePlus 6T : 10/256GB for Rs.39,999 Watch Full review-<a href="https://www.youtube.com/watch?v=4rSxuA8OSb4">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/oneplus/oneplus-6t-2.jpg' %}" alt="">
