--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 7/OnePlus_7.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 7/OnePlus_7.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">OnePlus released his new smartphone OnePlus 7 at price of Rs.35,989</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> OnePlus 7 : 8/256GB for Rs.35,989 Watch Full review-<a href="https://www.youtube.com/watch?v=_gP-fyx2SUA">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">OnePlus released his new smartphone OnePlus 7 at price of Rs.35,989</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> OnePlus 7 : 8/256GB for Rs.35,989 Watch Full review-<a href="https://www.youtube.com/watch?v=_gP-fyx2SUA">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/oneplus/oneplus-7-2.jpg' %}" alt="">
