--- a/limbo/affiliate/templates/mobile/realme/realme X2 pro/realme X2pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme X2 pro/realme X2pro.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Realme released his new smartphone Realme X2 Pro at price of 29,458-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Realme X2 Pro : 6/64GB for 29,458-INR Watch Full review-<a href="https://www.youtube.com/watch?v=C95eE35SEvs">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Realme released his new smartphone Realme X2 Pro at price of 29,458-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme X2 Pro : 6/64GB for 29,458-INR Watch Full review-<a href="https://www.youtube.com/watch?v=C95eE35SEvs">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/realme/realme-x2-pro-2.jpg' %}" alt="">
