--- a/limbo/affiliate/templates/mobile/realme/realme XT/realme XT.html
+++ b/limbo/affiliate/templates/mobile/realme/realme XT/realme XT.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Realme released his new smartphone Realme XT at price of 17,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Realme XT : 4/64GB for 17,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=FJOmBXU5x3c">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Realme released his new smartphone Realme XT at price of 17,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme XT : 4/64GB for 17,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=FJOmBXU5x3c">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/realme/realme-xt-2.jpg' %}" alt="">
