--- a/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
@@ -11,8 +11,8 @@ Can we play free fire in realme c11"> {% endblock key%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Realme released his new smartphone Realme C11 at price of 7499-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Realme C11 : 2/32GB for 7499-INR Watch Full review-<a href="https://www.youtube.com/watch?v=dBZOTfGD4jI&app=desktop">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Realme released his new smartphone Realme C11 at price of 7499-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme C11 : 2/32GB for 7499-INR Watch Full review-<a href="https://www.youtube.com/watch?v=dBZOTfGD4jI&app=desktop">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/realme/realme-c11.jpg' %}" alt="">
