--- a/limbo/affiliate/templates/mobile/apple/6s/6s.html
+++ b/limbo/affiliate/templates/mobile/apple/6s/6s.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Apple released his new smartphone iphone 6s at price of 29,740-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> iphone 6s : 2/32GB for 24,989-INR Watch Full review-<a href="https://www.youtube.com/watch?v=kycb238vTec">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Apple released his new smartphone iphone 6s at price of 29,740-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> iphone 6s : 2/32GB for 24,989-INR Watch Full review-<a href="https://www.youtube.com/watch?v=kycb238vTec">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image" src="{% static 'image/mobile/apple/apple-6s-2.jpg'%}" alt="">
