--- a/limbo/affiliate/templates/mobile/apple/7 plus/7plus.html
+++ b/limbo/affiliate/templates/mobile/apple/7 plus/7plus.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Apple released his new smartphone iphone 7 Plus at price of 36,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> iphone 7 Plus : 3/32GB for 36,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=GqBduR40YcU">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Apple released his new smartphone iphone 7 Plus at price of 36,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> iphone 7 Plus : 3/32GB for 36,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=GqBduR40YcU">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/apple/apple-7-plus-2.jpg' %}" alt="">
