--- a/limbo/affiliate/templates/mobile/apple/xr/xr.html
+++ b/limbo/affiliate/templates/mobile/apple/xr/xr.html
@@ -20,8 +20,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Apple released his new smartphone iphone XR at price of 52,500-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> iphone XR : 3/64GB for 52,500-INR Watch Full review-<a href="https://www.youtube.com/watch?v=Fv2Uj4uYaQo">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Apple released his new smartphone iphone XR at price of 52,500-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> iphone XR : 3/64GB for 52,500-INR Watch Full review-<a href="https://www.youtube.com/watch?v=Fv2Uj4uYaQo">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image" src="{% static 'image/mobile/apple/apple-xr-2.jpg'%}" alt="">
