--- a/limbo/affiliate/templates/mobile/mi/note 7s/note 7s.html
+++ b/limbo/affiliate/templates/mobile/mi/note 7s/note 7s.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Xiaomi released his new smartphone Redmi Note 7s at price of 11,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Redmi Note 7s : 4/64GB for 11,999-INR Watch Full review-<a href="http://www.youtube.com">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Xiaomi released his new smartphone Redmi Note 7s at price of 11,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Redmi Note 7s : 4/64GB for 11,999-INR Watch Full review-<a href="http://www.youtube.com">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/mi/redmi-note-7s-2.jpg' %}" alt="">
