--- a/limbo/affiliate/templates/mobile/mi/note 8 pro/note 8 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/note 8 pro/note 8 pro.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Xiaomi released his new phone Redmi Note 8 Pro at price of 15,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Redmi Note 8 Pro: 6/64GB for 15,999INR Watch Full review-<a href="https://www.youtube.com/watch?v=5jWhgMMw_eQ">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Xiaomi released his new phone Redmi Note 8 Pro at price of 15,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Redmi Note 8 Pro: 6/64GB for 15,999INR Watch Full review-<a href="https://www.youtube.com/watch?v=5jWhgMMw_eQ">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"src="{%static 'image/mobile/mi/redmi-note-8-pro-2.jpg'%}" alt="">
