--- a/limbo/affiliate/templates/mobile/mi/note 8/note 8.html
+++ b/limbo/affiliate/templates/mobile/mi/note 8/note 8.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Xiaomi released his new smartphone Redmi Note 8 at price of 11,999INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Redmi Note 8 : 4/64GB for 11,999INR Watch Full review-<a href="https://www.youtube.com/watch?v=GBkpuDS2_zk">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Xiaomi released his new smartphone Redmi Note 8 at price of 11,999INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Redmi Note 8 : 4/64GB for 11,999INR Watch Full review-<a href="https://www.youtube.com/watch?v=GBkpuDS2_zk">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/mi/redmi-note-8-2.jpg' %}" alt="">
