--- a/limbo/affiliate/templates/mobile/mi/redmi 8A/redmi 8A.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi 8A/redmi 8A.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Xiaomi released his new smartphone Redmi 8A at price of 6,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Redmi 8A : 2/32GB for 6,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=1Qsznx2NZnw">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Xiaomi released his new smartphone Redmi 8A at price of 6,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Redmi 8A : 2/32GB for 6,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=1Qsznx2NZnw">http://www.youtube.com </a></h1>
         </div>
         <div >
           <<img class="image"  src="{% static 'image/mobile/mi/redmi-8a-2.jpg' %}" alt="">
