--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 7T/OnePlus_7T.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 7T/OnePlus_7T.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">OnePlus released his new smartphone OnePlus 7T at price of Rs.36,780</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> OnePlus 7T : 8/128GB for Rs.36,780 Watch Full review-<a href="https://www.youtube.com/watch?v=XRiUNPf-_-4">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">OnePlus released his new smartphone OnePlus 7T at price of Rs.36,780</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> OnePlus 7T : 8/128GB for Rs.36,780 Watch Full review-<a href="https://www.youtube.com/watch?v=XRiUNPf-_-4">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/oneplus/oneplus-7t-2.jpg' %}" alt="">
