--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 8pro/OnePlus_8_Pro.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 8pro/OnePlus_8_Pro.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">OnePlus released his new smartphone OnePlus 8 Pro at price of Rs.54,999</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> OnePlus 8 Pro : 8/128GB for Rs.54,999 Watch Full review-<a href="https://www.youtube.com/watch?v=cppdgbCus78">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">OnePlus released his new smartphone OnePlus 8 Pro at price of Rs.54,999</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> OnePlus 8 Pro : 8/128GB for Rs.54,999 Watch Full review-<a href="https://www.youtube.com/watch?v=cppdgbCus78">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/oneplus/oneplus-8-pro-2.jpg' %}" alt="">
