--- a/limbo/affiliate/templates/mobile/oneplus/oneplus_nord/oneplus nord.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus_nord/oneplus nord.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">OnePlus released his new smartphone OnePlus nord 5G at price of 24,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> onePlus nord 5G : 6/64GB for 24,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=ucRyYVH8tU0">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">OnePlus released his new smartphone OnePlus nord 5G at price of 24,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> onePlus nord 5G : 6/64GB for 24,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=ucRyYVH8tU0">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" alt="">
