--- a/limbo/affiliate/templates/mobile/realme/realme 5s/realme 5s.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 5s/realme 5s.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Realme released his new smartphone Realme 5s at price of 10,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Realme 5s : 4/64GB for 10,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=jTA9kqm7eZU">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Realme released his new smartphone Realme 5s at price of 10,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme 5s : 4/64GB for 10,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=jTA9kqm7eZU">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/realme/realme-5s-2.jpg' %}" alt="">
