--- a/limbo/affiliate/templates/mobile/realme/realme 6/realme 6.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 6/realme 6.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Realme released his new smartphone Realme 6 at price of 14,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Realme 6 : 4/64GB for 14,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=5pkkPL7aBuY">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Realme released his new smartphone Realme 6 at price of 14,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme 6 : 4/64GB for 14,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=5pkkPL7aBuY">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/realme/realme-6-2.jpg' %}" alt="">
