--- a/limbo/affiliate/templates/mobile/realme/realme X50 pro/realme X50 pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme X50 pro/realme X50 pro.html
@@ -20,8 +20,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Realme released his new smartphone Realme X50 Pro at price of 39,999-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Realme X50 Pro : 6/128GB for 39,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=_iZdJgqJ6Cc">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight: 400;">Realme released his new smartphone Realme X50 Pro at price of 39,999-INR</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme X50 Pro : 6/128GB for 39,999-INR Watch Full review-<a href="https://www.youtube.com/watch?v=_iZdJgqJ6Cc">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/realme/realme-x50-pro-2.jpg' %}" alt="">
