--- a/limbo/affiliate/templates/mobile/samsung/note 10/note 10.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 10/note 10.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Samsung released his new smartphone Samsung Galaxy Note 10 at price of 73,600-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy Note 10 : 8/256GB for 73,600-INR Watch Full review-<a href="https://www.youtube.com/watch?v=7xHL1urUmZE">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Samsung released his new smartphone Samsung Galaxy Note 10 at price of 73,600-INR</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Samsung Galaxy Note 10 : 8/256GB for 73,600-INR Watch Full review-<a href="https://www.youtube.com/watch?v=7xHL1urUmZE">http://www.youtube.com </a></h1>
         </div>
         <div >
           <div >
