--- a/limbo/affiliate/templates/mobile/samsung/s10/s10.html
+++ b/limbo/affiliate/templates/mobile/samsung/s10/s10.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Samsung Galaxy S10 released his new smartphone Samsung Galaxy S10 at price of Rs. 56,800</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy S10 : 8/512GB for Rs.56,800 Watch Full review-<a href="https://www.youtube.com/watch?v=wt-Vg8R7w10">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Samsung Galaxy S10 released his new smartphone Samsung Galaxy S10 at price of Rs. 56,800</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Samsung Galaxy S10 : 8/512GB for Rs.56,800 Watch Full review-<a href="https://www.youtube.com/watch?v=wt-Vg8R7w10">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/samsung/samsung-galaxy-s10-2.jpg' %}" alt="">
