--- a/limbo/affiliate/templates/mobile/samsung/s10e/s10e.html
+++ b/limbo/affiliate/templates/mobile/samsung/s10e/s10e.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Samsung released his new smartphone Samsung Galaxy s10e at price of Rs. 59,000</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy S10e: 6/128GB for Rs. 59,000 Watch Full review-<a href="https://www.youtube.com/watch?v=G-z3JU6nr04">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Samsung released his new smartphone Samsung Galaxy s10e at price of Rs. 59,000</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Samsung Galaxy S10e: 6/128GB for Rs. 59,000 Watch Full review-<a href="https://www.youtube.com/watch?v=G-z3JU6nr04">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/samsung/samsung-galaxy-s10e-2.jpg' %}" alt="">
