--- a/limbo/affiliate/templates/mobile/samsung/s20/s20.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20/s20.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Samsung released his new smartphone Samsung Galaxy S20 at price of Rs. 70499</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy S20 : 8/128GB for Rs. 70499 Watch Full review-<a href="https://www.youtube.com/watch?v=bkQJRzc3pWM">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Samsung released his new smartphone Samsung Galaxy S20 at price of Rs. 70499</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Samsung Galaxy S20 : 8/128GB for Rs. 70499 Watch Full review-<a href="https://www.youtube.com/watch?v=bkQJRzc3pWM">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/samsung/samsung-galaxy-s20-2.jpg' %}" alt="">
