--- a/limbo/affiliate/templates/mobile/samsung/z flip/z flip.html
+++ b/limbo/affiliate/templates/mobile/samsung/z flip/z flip.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Samsung released his new smartphone Samsung Galaxy Z Flip at price of Rs.1,08,999</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy Z flip : 8/256GB for Rs.1,08,999 Watch Full review-<a href="https://www.youtube.com/watch?v=sXwqd6JLucc">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Samsung released his new smartphone Samsung Galaxy Z Flip at price of Rs.1,08,999</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Samsung Galaxy Z flip : 8/256GB for Rs.1,08,999 Watch Full review-<a href="https://www.youtube.com/watch?v=sXwqd6JLucc">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/samsung/samsung-galaxy-z-flip-2.jpg' %}" alt="">
