--- a/limbo/affiliate/templates/mobile/vivo/vivo y50/vivo y50.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo y50/vivo y50.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Vivo released his new smartphone Vivo Y50 at price of Rs. 17990-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Vivo Y50 : 8/128GB for Rs. 17990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=hVO6WTKVRGo">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Vivo released his new smartphone Vivo Y50 at price of Rs. 17990-INR</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Vivo Y50 : 8/128GB for Rs. 17990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=hVO6WTKVRGo">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/vivo/vivo-y50-2.jpg' %}" alt="">
