--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -563,6 +563,24 @@
     <section>
       <div class="blogs">
         <div class="blog-posts ">
+         <!--1-->
+          <article class="blog-post shadow">
+            <div class="post">
+              <div class="">
+                <img class="img-article"  src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" alt="">
+              </div>
+              <div class="post-info">
+                <h3 style="color:gray;">10 Upcoming mobile phones in 2020</h3>
+                <p style="color:gray;">Are you searching for the upcoming mobile phones in 2020, so here is the list of new mobile phone coming soon in India. With lots of rumors and leaks about the upcoming mobile phones, we have listed the phones which were coming soon in India. </p>
+                <p></p><br>
+                <div class="badge">
+                  <a class="read-more" href="{% url 'upcomingMobile' %}">Read more</a>
+                  <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Technology</a>
+                </div>
+              </div>
+            </div>
+          </article>
+          <!--1-->
           <article class="blog-post shadow">
             <div class="post">
               <div class="">
