--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -1,6 +1,6 @@
 {% extends 'page/bas.html' %}
 {% block desc%}<meta name="description" content="Are you searching for the upcoming mobile phones in 2020, so here is the list of new mobile phone coming soon in India"> {% endblock desc%}
-{% block key%}<meta name="keywords" content=""> {% endblock key%}
+{% block key%}<meta name="keywords" content="new mobile phone coming soon, Upcoming mobile phone in 2020, New upcoming smartphones, upcoming phones in 2020, new mobile phones 2020, new smartphone coming soon   "> {% endblock key%}
 {% block style %}
 <style>
   .code{
@@ -14,6 +14,7 @@
   }
   .iframe{
     width:100%;
+    border:0;
   }
 </style>
 {% endblock style %}
@@ -60,7 +61,7 @@
         <hr class="my-2">
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">1. OnePlus Nord</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/Xzh8BdaaAvs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/Xzh8BdaaAvs"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Price</b> : Starting from 24,999-INR <br><b>Release date</b> : 4th August, 2020 </p>
           <p></p>
@@ -79,7 +80,7 @@
         <!-- 2 -->
         <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">2. Samsung Galaxy M31s</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/R_NW4j-Rg7w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/R_NW4j-Rg7w" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 16,999-INR <br><b>Release date</b> : 30 july, 2020 </p>
           <p></p>
@@ -98,7 +99,7 @@
         <!-- 3 -->
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">3. Samsung Galaxy Note 20</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/u9sHT_Rh3qY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/u9sHT_Rh3qY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 99,999-INR <br><b>Release date</b> : 05 Aug, 2020 (Unofficial) </p>
           <h4 class="content">Samsung Galaxy Note 20: Key specifications </h4>
@@ -115,7 +116,7 @@
         <!-- 4 -->
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">4. Samsung Galaxy Note 20 Ultra</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/UnWn1KVURGc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/UnWn1KVURGc" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 121,990-INR <br><b>Release date</b> : 05 Aug, 2020 (Unofficial) </p>
           <p class="content">Samsung has announced to introduce its <b>new smartphone coming soon</b> on 5 August, 2020 (Unofficial). Samsung galaxy note 20 ultra is starting from 121,990-INR in India.</p>
@@ -133,7 +134,7 @@
         <!-- 5 -->
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">5. Asus Zenfone 7</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/0ebWk9b2-yI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/0ebWk9b2-yI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 34,999-INR <br><b>Release date</b> : Not announced yet. </p>
           <h4 class="content">Asus Zenfone 7: Key specifications </h4>
@@ -150,7 +151,7 @@
             <!-- 6 -->
         <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">6. Poco C3</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/NSDktWO0woY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/NSDktWO0woY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 8,499-INR <br><b>Release date</b> : Not announced yet. </p>
           <p class="content">After the success of Poco F1 and Poco X2, now Poco is bringing a budget phone called Poco C3. in india starting from 8,999-INR</p>
@@ -169,7 +170,7 @@
         <!-- 7 -->
          <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">7. Xiaomi A4 </h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/Z6a7OhC9W_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/Z6a7OhC9W_M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 13,999-INR <br><b>Release date</b> : 20 Aug, 2020 (Unofficial) </p>
           <h4 class="content">Xiaomi A4: Key specifications </h4>
@@ -186,7 +187,7 @@
         <!-- 8 -->
          <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">8. Realme C15 </h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/a3Cci-84PLY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/a3Cci-84PLY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <hr class="my-2">
          <p><b>Expected price</b> : 12,999-INR <br><b>Release date</b> : 31 july, 2020 </p>
           <h4 class="content">Realme C15: Key specifications </h4>
@@ -204,7 +205,7 @@
         <!-- 10 -->
          <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">9. Realme X3 Pro</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/pWqqDmmD3Ww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/pWqqDmmD3Ww" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 31,999-INR <br><b>Release date</b> : Not announced yet. </p>
           <p class="content"></p>
@@ -222,7 +223,7 @@
         <!-- 11 -->
          <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">10. Redmi 9A</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/QM0tfag9E58" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/QM0tfag9E58" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 6,999-INR <br><b>Release date</b> : 4 august, 2020 </p>
           <p class="content"></p>
@@ -236,11 +237,10 @@
             <li>Processor : Mediatek Helio G25</li>
           </ul>
           <hr class="my-2">
+          </div>
+            <p class="content">You may have benefited from the above list of <b>upcoming phones 2020</b>. From now on, we will keep you informed about such <b>new mobile phones 2020</b>. If are looking for <b>best gaming phones under 20000</b> <a href="{% url 'pubg' %}">Click here</a>. </p>
+            <h4 style="font-weight: 400;">Thankyou :)</h4>
+            <br>
+          </div>
         </div>
-        <p class="content">You may have benefited from the above list of <b>upcoming phones 2020</b>. From now on, we will keep you informed about such <b>new mobile phones 2020</b>. If are looking for <b>best gaming phones under 20000</b> <a href="{% url 'pubg' %}">Click here</a>. </p>
-        <h4 style="font-weight: 400;">Thankyou :)</h4>
-        <br>
-        </div>
-      </div>
-    </div>
 {% endblock content%}
