--- a/limbo/affiliate/templates/mobile/samsung/note 10plus/note 10plus.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 10plus/note 10plus.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Samsung released his new smartphone Samsung Galaxy Note 10+ at price of Rs. 85,000</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Samsung Galaxy Note 10+ : 12/256GB for Rs. 85,000 Watch Full review-<a href="https://www.youtube.com/watch?v=tBWrKEaYciM">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Samsung released his new smartphone Samsung Galaxy Note 10+ at price of Rs. 85,000</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Samsung Galaxy Note 10+ : 12/256GB for Rs. 85,000 Watch Full review-<a href="https://www.youtube.com/watch?v=tBWrKEaYciM">http://www.youtube.com </a></h1>
         </div>
         <div >
             <img class="image"  src="{% static 'image/mobile/samsung/samsung-galaxy-note-10+-2.jpg' %}" alt="">
