--- a/limbo/affiliate/templates/mobile/vivo/vivo s1 pro/vivo s1pro.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo s1 pro/vivo s1pro.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Vivo released his new smartphone Vivo S1 pro at price of Rs. 19,990</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Vivo S1 Pro : 8/128GB for Rs. 19,990 Watch Full review-<a href="https://www.youtube.com/watch?v=xN4uWpHVnvI">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Vivo released his new smartphone Vivo S1 pro at price of Rs. 19,990</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Vivo S1 Pro : 8/128GB for Rs. 19,990 Watch Full review-<a href="https://www.youtube.com/watch?v=xN4uWpHVnvI">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/vivo/vivo-s1-pro-2.jpg' %}" alt="">
