--- a/limbo/affiliate/templates/mobile/vivo/vivo u10/vivo u10.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo u10/vivo u10.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Vivo released his new smartphone Vivo U10 at price of Rs. 10,990-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Vivo U10 : 3/32GB for Rs. 10,990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=xj3wIfpfMqU">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Vivo released his new smartphone Vivo U10 at price of Rs. 10,990-INR</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Vivo U10 : 3/32GB for Rs. 10,990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=xj3wIfpfMqU">http://www.youtube.com </a></h1s>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/vivo/vivo-u10-2.jpg' %}" alt="">
