--- a/limbo/affiliate/templates/mobile/vivo/vivo u20/vivo u20.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo u20/vivo u20.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Vivo released his new smartphone Vivo U20 at price of Rs. 11,490-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Vivo U20 : 4/64GB for Rs. 11,490-INR Watch Full review-<a href="https://www.youtube.com/watch?v=O484LMb9bv0">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Vivo released his new smartphone Vivo U20 at price of Rs. 11,490-INR</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Vivo U20 : 4/64GB for Rs. 11,490-INR Watch Full review-<a href="https://www.youtube.com/watch?v=O484LMb9bv0">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/vivo/vivo-u20-2.jpg' %}" alt="">
