--- a/limbo/affiliate/templates/mobile/vivo/vivo v19/vivo v19.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo v19/vivo v19.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Vivo released his new smartphone Vivo V19 at price of Rs. 27,990-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Vivo V19 : 8/128GB for Rs. 27,990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=tYbe7kafJ1g">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Vivo released his new smartphone Vivo V19 at price of Rs. 27,990-INR</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Vivo V19 : 8/128GB for Rs. 27,990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=tYbe7kafJ1g">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/vivo/vivo-v19-2.jpg' %}" alt="">
