--- a/limbo/affiliate/templates/mobile/vivo/vivo z1 pro/vivo z1 pro.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo z1 pro/vivo z1 pro.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Vivo released his new smartphone Vivo Z1 PRO at price of Rs. 17990-INR</h4>
-          <h2 class="content_tittle"><span>REVIEW</span> Vivo Z1 Pro : 6/128GB for Rs. 17990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=iVthkWJr30s">http://www.youtube.com </a></h2>
+          <h4 class="content" style="font-weight:400;">Vivo released his new smartphone Vivo Z1 PRO at price of Rs. 17990-INR</h4>
+          <h1 class="content_tittle" style="font-weight:400;"><span>REVIEW</span> Vivo Z1 Pro : 6/128GB for Rs. 17990-INR Watch Full review-<a href="https://www.youtube.com/watch?v=iVthkWJr30s">http://www.youtube.com </a></h1>
         </div>
         <div >
           <img class="image"  src="{% static 'image/mobile/vivo/vivo-z1-pro-2.jpg' %}" alt="">
